# Fastapi_template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  FastAPI 通用模板技术选型汇总.md  Makefile  README.md  README_zh.md  alembic.ini  docker-compose.yml  flake8_protected_files.py  pyproject.toml
alembic/: env.py
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  health.py  time_demo.py
app/core/: config.py  init_app.py  logging.py  security.py
app/crud/: base.py  user.py
app/db/: base.py  base_class.py  session.py
app/models/: user.py
app/schemas/: token.py  user.py
app/utils/: time.py
tests/: conftest.py  test_health.py
